--- a/test/testcases/test-clone.html
+++ b/test/testcases/test-clone.html
@@ -15,50 +15,20 @@ limitations under the License.
 -->
 
 <!DOCTYPE html>
-<style>
-body {
-  background-color: green;
-}
-body div#fail {
-  display: none;
-}
-body.fail {
-  background-color: red;
-}
-body.fail div#pass {
-  display: none;
-}
-body.fail div#fail {
-  display: block;
-}
-</style>
-
-<div id="pass">PASS</div>
-<div id="fail">FAIL</div>
 <div id="anim"></div>
 
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
 <script>
 
-var fail = function(failureMessage) {
-  var div = document.createElement("div");
-  div.innerText = failureMessage;
-  document.body.appendChild(div);
-  document.body.className = "fail";
+var check = function(actual, expected, description) {
+  console.log('check', actual, expected);
+  test(function() { assert_equals(actual, expected); }, description);
 };
 
-var check = function(actual, expected, failureMessage) {
-  if (actual !== expected) {
-    fail(failureMessage + ". Expected '" + expected + "', got '" + actual +
-        "'.");
-  }
-};
-
-var checkNotEqual = function(actual, unexpected, failureMessage) {
-  if (actual === unexpected) {
-    fail(failureMessage + ". Got unexpected '" + unexpected + "'");
-  }
+var checkNotEqual = function(actual, unexpected, description) {
+  console.log('check', actual, unexpected);
+  test(function() { assert_not_equals(actual, unexpected); }, description);
 };
 
 var elem = document.getElementById("anim");
@@ -87,11 +57,11 @@ check(parGroupClone.children.length, 2, "ParGroup clone should clone children");
 checkNotEqual(parGroupClone.children[0], anim,
     "ParGroup clone should clone first child");
 check(parGroupClone.children[0].duration, 1.0,
-    "ParGroup clone should clone first child");
+    "ParGroup clone should clone first child's duration");
 checkNotEqual(parGroupClone.children[1], clone,
-    "ParGroup clone should clone first child");
+    "ParGroup clone should clone second child");
 check(parGroupClone.children[1].duration, 1.0,
-    "ParGroup clone should clone first child");
+    "ParGroup clone should clone second child's duration");
 
 parGroup.iterationTime = 0.3;
 parGroupClone.iterationTime = 0.4;
@@ -111,11 +81,11 @@ check(seqGroupClone.children.length, 2, "SeqGroup clone should clone children");
 checkNotEqual(seqGroupClone.children[0], anim,
     "SeqGroup clone should clone first child");
 check(seqGroupClone.children[0].duration, 1.0,
-    "SeqGroup clone should clone first child");
+    "SeqGroup clone should clone first child's duration");
 checkNotEqual(seqGroupClone.children[1], clone,
-    "SeqGroup clone should clone first child");
+    "SeqGroup clone should clone second child");
 check(seqGroupClone.children[1].duration, 1.0,
-    "SeqGroup clone should clone first child");
+    "SeqGroup clone should clone second child's duration");
 
 seqGroup.iterationTime = 0.5;
 seqGroupClone.iterationTime = 0.6;
