--- a/test/testcases/test-duration.html
+++ b/test/testcases/test-duration.html
@@ -15,40 +15,15 @@ limitations under the License.
 -->
 
 <!DOCTYPE html>
-<style>
-body {
-  background-color: green;
-}
-body div#fail {
-  display: none;
-}
-body.fail {
-  background-color: red;
-}
-body.fail div#pass {
-  display: none;
-}
-body.fail div#fail {
-  display: block;
-}
-</style>
-
-<div id="pass">PASS</div>
-<div id="fail">FAIL</div>
 <div id="anim"></div>
 
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
 <script>
 
-var check = function(actual, expected, failureMessage) {
-  if (actual !== expected) {
-    var div = document.createElement("div");
-    div.innerText =
-        failureMessage + ". Expected '" + expected + "', got '" + actual + "'.";
-    document.body.appendChild(div);
-    document.body.className = "fail";
-  }
+var check = function(actual, expected, description) {
+  console.log('check', actual, expected);
+  test(function() { assert_equals(actual, expected); }, description);
 }
 
 var anim = new Animation(document.getElementById("anim"), {left: ["100px"]},
@@ -58,57 +33,57 @@ var seqGroup = new SeqGroup();
 
 // Should use intrinsic duration if Timing.duration is undefined.
 // Animation
-check(anim.duration, 0.0, "Duration should use intrinsic value");
+check(anim.duration, 0.0, "Animation duration should use intrinsic value");
 anim.timing.duration = 1.0;
-check(anim.duration, 1.0, "Duration should use specified value");
+check(anim.duration, 1.0, "Animation duration should use specified value");
 // ParGroup
-check(parGroup.duration, 0.0, "Duration should use intrinsic value");
+check(parGroup.duration, 0.0, "ParGroup duration should use intrinsic value");
 parGroup.add(anim);
-check(parGroup.duration, 3.0, "Duration should be derived from child");
+check(parGroup.duration, 3.0, "ParGroup duration should be derived from child");
 parGroup.timing.duration = 2.0;
-check(parGroup.duration, 2.0, "Duration should use specified value");
+check(parGroup.duration, 2.0, "ParGroup duration should use specified value");
 // SeqGroup
-check(seqGroup.duration, 0.0, "Duration should use intrinsic value");
+check(seqGroup.duration, 0.0, "SeqGroup duration should use intrinsic value");
 seqGroup.add(anim);
-check(seqGroup.duration, 3.0, "Duration should be derived from child");
+check(seqGroup.duration, 3.0, "SeqGroup duration should be derived from child");
 seqGroup.timing.duration = 4.0;
-check(seqGroup.duration, 4.0, "Duration should use specified value");
+check(seqGroup.duration, 4.0, "SeqGroup duration should use specified value");
 
 // TimedItem.duration should override TimedItem.timing.duration until explicitly
 // set to undefined.
 // Animation
 anim.timing.duration = 5.0;
-check(anim.duration, 5.0, "Failed to update duration");
+check(anim.duration, 5.0, "Animation failed to update duration");
 anim.duration = 6.0;
-check(anim.duration, 6.0, "Failed to override Timing.duration");
+check(anim.duration, 6.0, "Animation failed to override Timing.duration");
 anim.timing.duration = 7.0;
-check(anim.duration, 6.0, "Timing.duration should be overriden");
+check(anim.duration, 6.0, "Animation Timing.duration should be overriden with 7.0");
 anim.duration = null;
-check(anim.duration, null, "Timing.duration should be overriden");
+check(anim.duration, null, "Animation Timing.duration should be overriden with null");
 anim.duration = undefined;
-check(anim.duration, 7.0, "Timing.duration should no longer be overriden");
+check(anim.duration, 7.0, "Animation Timing.duration should no longer be overriden");
 // ParGroup
 parGroup.add(anim);
 parGroup.timing.duration = 8.0;
-check(parGroup.duration, 8.0, "Failed to update duration");
+check(parGroup.duration, 8.0, "ParGroup Failed to update duration");
 parGroup.duration = 9.0;
-check(parGroup.duration, 9.0, "Failed to override Timing.duration");
+check(parGroup.duration, 9.0, "ParGroup Failed to override Timing.duration");
 parGroup.timing.duration = 10.0;
-check(parGroup.duration, 9.0, "Timing.duration should be overriden");
+check(parGroup.duration, 9.0, "ParGroup Timing.duration should be overriden with 10.0");
 parGroup.duration = null;
-check(parGroup.duration, null, "Timing.duration should be overriden");
+check(parGroup.duration, null, "ParGroup Timing.duration should be overriden with null");
 parGroup.duration = undefined;
-check(parGroup.duration, 10.0, "Timing.duration should no longer be overriden");
+check(parGroup.duration, 10.0, "ParGroup Timing.duration should no longer be overriden");
 // SeqGroup
 seqGroup.add(anim);
 seqGroup.timing.duration = 11.0;
-check(seqGroup.duration, 11.0, "Failed to update duration");
+check(seqGroup.duration, 11.0, "SeqGroup Failed to update duration");
 seqGroup.duration = 12.0;
-check(seqGroup.duration, 12.0, "Failed to override Timing.duration");
+check(seqGroup.duration, 12.0, "SeqGroup Failed to override Timing.duration");
 seqGroup.timing.duration = 13.0;
-check(seqGroup.duration, 12.0, "Timing.duration should be overriden");
+check(seqGroup.duration, 12.0, "SeqGroup Timing.duration should be overriden with 13.0");
 seqGroup.duration = null;
-check(seqGroup.duration, null, "Timing.duration should be overriden");
+check(seqGroup.duration, null, "SeqGroup Timing.duration should be overriden with null");
 seqGroup.duration = undefined;
 check(seqGroup.duration, 13.0, "Timing.duration should no longer be overriden");
 
@@ -123,10 +98,10 @@ check(anim.animationDuration, 45.0,
 // and iterationCount, until explicitly set to undefined.
 anim.animationDuration = 16.0;
 check(anim.animationDuration, 16.0,
-    "animationDuration should override calculated value");
+    "animationDuration should override calculated value, 16.0");
 anim.animationDuration = null;
 check(anim.animationDuration, null,
-    "animationDuration should override calculated value");
+    "animationDuration should override calculated value, null");
 anim.animationDuration = undefined;
 check(anim.animationDuration, 45.0,
     "animationDuration should use calculated value");
