Reverting s/document.timeline/dt/ change.

--- a/test/testcases/test-compositing-order.html
+++ b/test/testcases/test-compositing-order.html
@@ -42,8 +42,6 @@ var leftToRight = {left: ["100px", "200px"]};
 var rightToLeft = {left: ["200px", "100px"]};
 var noop = {color: "red"};
 
-var dt = document.timeline;
-
 // Test that an animation uses the correct compositing order when it has a
 // grandparent that remains active longer than its parent.
 //
@@ -52,7 +50,7 @@ var dt = document.timeline;
 // because the second animation has a later start time, it should be composited
 // second, so the div should end up on the left.
 var target1 = document.getElementById("target1");
-var player = dt.play(new ParGroup([
+var player = document.timeline.play(new ParGroup([
   new ParGroup([
     new Animation(target1, leftToRight, 1.0),
   ]),
@@ -74,7 +72,7 @@ setTimeout(function() {
 // rate of 4.0, so the effective start time of its child animation is 2.0. So
 // the the div should end up on the left at time 3.0.
 var target2 = document.getElementById("target2");
-var player = dt.play(new ParGroup([
+var player = document.timeline.play(new ParGroup([
   new Animation(target2, leftToRight, 1.0),
   new SeqGroup([
     new Animation(target1, noop, 8.0),
@@ -91,10 +89,10 @@ setTimeout(function() {
 
 // Test compositing order follows Player start time order.
 var target3 = document.getElementById("target3");
-var player1 = dt.play(
+var player1 = document.timeline.play(
   new Animation(target3, {left: ["100px", "200px"]}, 1.0));
 player1.startTime += 1.0;
-var player2 = dt.play(
+var player2 = document.timeline.play(
   new Animation(target3, {left: ["100px", "1000px"]}, 2.0));
 
 player1.paused = true;
@@ -108,7 +106,7 @@ setTimeout(function() {
 
 // Test compositing order follows tree order.
 var target4 = document.getElementById("target4");
-var player = dt.play(new ParGroup([
+var player = document.timeline.play(new ParGroup([
   new Animation(target4, {left: ["100px", "1000px"]}, 1.0),
   new SeqGroup([
     new Animation(target4, {left: ["100px", "1000px"]}, 1.0),
